fix: change default font to codec-cold to fix alignment issue

--- a/src/stylesheet/index.css
+++ b/src/stylesheet/index.css
@@ -5,7 +5,7 @@
 
 html,
 body {
-    font-family: 'Biryani', sans-serif;
+    font-family: 'codec-cold', sans-serif;
     background-color: var(--color-bg);
     color: var(--color-fg);
     transition: color cubic-bezier(0.645, 0.045, 0.355, 1) 0.2s, background-color cubic-bezier(0.645, 0.045, 0.355, 1) 0.2s;
